Change title from 'Tariff Cost Clock' to 'The Cost of Tariffs'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Tariff Cost Clock</title>
+<title>The Cost of Tariffs</title>
 <style>
   :root{
     --bg:#0b1020; --card:#111936; --fg:#e9eefc; --muted:#9fb0da;
