--- a/index.html
+++ b/index.html
@@ -70,6 +70,14 @@
     }
     .foot{color:#b9c6ec; font-size:.85rem; max-width:680px; line-height:1.4}
     .sources{color:#7487c0; font-size:.8rem}
+    .sources a.github-link{
+      display:inline-flex; align-items:center;
+      color:inherit; text-decoration:none; opacity:.7;
+      transition:opacity .2s ease-in-out;
+    }
+    .sources a.github-link:hover,
+    .sources a.github-link:focus{opacity:1}
+    .sources a.github-link svg{width:14px; height:14px; fill:currentColor}
     @media (max-width:600px){
       body{padding:18px}
       .wrap{gap:18px}
@@ -108,7 +116,9 @@
 
   <div class="foot">
     <p>Notes: The clock totals U.S. customs duties remitted since April 2025, as reported in the Monthly Treasury Statement (Table 4). It's a revenue measure of tariff taxes, not a direct estimate of price changes or broader economic losses. Importers and exporters may absorb part of the burden while the rest passes through to businesses and households over time. Figures refresh monthly when Treasury publishes new data; the live counter extrapolates between releases using the latest pace.</p>
-    <p class="sources">Sources: U.S. Treasury FiscalData API — Monthly Treasury Statement Table 4 • BLS Import/Export Price Program • BLS CPI detailed tables • BLS OEWS</p>
+    <p class="sources">Sources: U.S. Treasury FiscalData API — Monthly Treasury Statement Table 4 • BLS Import/Export Price Program • BLS CPI detailed tables • BLS OEWS • <a class="github-link" href="https://github.com/Zach10za/tariffclock" target="_blank" rel="noopener" aria-label="GitHub project">
+      <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12 .5C5.6.5.5 5.6.5 12c0 5.1 3.3 9.4 7.9 10.9.6.1.8-.3.8-.6v-2.2c-3.2.7-3.8-1.5-3.8-1.5-.5-1.3-1.3-1.7-1.3-1.7-1-.7.1-.7.1-.7 1.1.1 1.6 1.2 1.6 1.2 1 .1.6 2.2 3.5 1.6.1-.8.4-1.3.7-1.6-2.5-.3-5.2-1.2-5.2-5.6 0-1.2.4-2.1 1.1-2.9-.1-.3-.5-1.4.1-2.8 0 0 .9-.3 2.9 1.1.8-.2 1.7-.3 2.5-.3s1.7.1 2.5.3c2-1.4 2.9-1.1 2.9-1.1.6 1.4.2 2.5.1 2.8.7.8 1.1 1.7 1.1 2.9 0 4.4-2.7 5.3-5.3 5.6.4.3.8 1 .8 2.1v3.1c0 .3.2.7.8.6 4.6-1.5 7.9-5.8 7.9-10.9C23.5 5.6 18.4.5 12 .5Z"/></svg>
+    </a></p>
   </div>
 
 </div>
