--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
       --bg:#0b1020; --card:#111936; --fg:#e9eefc; --muted:#9fb0da;
       --accent:#36e08f; --accent2:#ff6b6b; --shadow:0 10px 35px rgba(0,0,0,.35)
     }
-    html,body{height:100%}
+    html,body{min-height:100%}
     body{
       margin:0; background:linear-gradient(180deg,#0a0f1e,#101936);
       color:var(--fg); font: 16px/1.45 system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji";
-      display:flex; align-items:center; justify-content:center; padding:32px
+      display:flex; align-items:center; justify-content:center; padding:32px;
+      min-height:100vh; overflow-y:auto
     }
     .wrap{
       max-width:960px; width:100%; min-height:100%;
@@ -79,8 +80,8 @@
     .sources a.github-link:focus{opacity:1}
     .sources a.github-link svg{width:14px; height:14px; fill:currentColor}
     @media (max-width:600px){
-      body{padding:18px}
-      .wrap{gap:18px}
+      body{display:block; padding:18px 18px 42px}
+      .wrap{gap:18px; justify-content:flex-start}
       .percapita{flex-direction:column; gap:6px}
     }
   </style>
